<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@color/black"
        android:orientation="vertical" >
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="信息区域"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="前期可加入新手导航"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="后期可植入广告"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/initiate_event"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/pending_event"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/confirm_event"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/black" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/footprint"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/friend"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="12dp" />
    </LinearLayout>

</FrameLayout>