<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@color/black"
        android:orientation="vertical" >

        <CalendarView
            android:id="@+id/calendar_calendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/black" >

        <Button
            android:id="@+id/calendar_footprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="dispatchMvcEvent"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/footprint"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <Button
            android:id="@+id/calendar_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="dispatchMvcEvent"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/calendar"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <Button
            android:id="@+id/calendar_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="dispatchMvcEvent"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/friend"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <Button
            android:id="@+id/calendar_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="dispatchMvcEvent"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="12dp" />
    </LinearLayout>

</FrameLayout>